--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,11 @@ generate_messages(
   std_msgs
 )
 
+catkin_package(
+ CATKIN_DEPENDS message_runtime std_msgs
+)
+
+
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
